Adden new questions to help page

--- a/web/ayuda.html
+++ b/web/ayuda.html
@@ -100,6 +100,99 @@ nav_section: help
                 </div>
               </div>
             </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#qSix">
+                  <strong>6. ¿Tiene en cuenta el gobierno los informes del tribunal sentenciador?</strong>
+                </a>
+              </div>
+              <div class="accordion-body collapse" id="qSix">
+                <div class="accordion-inner">
+                  <p>Nadie lo sabe. El veredicto de los informes tanto del Tribunal Sentenciador como del Ministerio Fiscal no se hace público por lo que no podemos saber si los indultos son concedidos a favor o en contra de su opinión.</p>
+                  <p>Según las fuentes que hemos consultado, en la mayor parte de los casos el informe del tribunal sentenciador es contrario a la concesión del indulto, pero no tenemos la información suficiente como para sacar conclusiones verificables.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#qSeven">
+                  <strong>7. ¿Cuántas solicitudes de indulto han sido denegadas?</strong>
+                </a>
+              </div>
+              <div class="accordion-body collapse" id="qSeven">
+                <div class="accordion-inner">
+                  <p>Nadie lo sabe. Solamente conocemos aquellos indultos que han sido concedidos por su obligatoria publicación en el BOE.</p>
+                  <p>¿Que porcentaje de indultos son concedidos? ¿Sobre qué delitos hay una mayor frecuencia de concesión de indulto?</p>
+                  <p>
+                  Todas estas interesantes preguntas no pueden ser respondidas con la información que los ciudadanos tenemos sobre los indultos.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#qEight">
+                  <strong>8. ¿Cómo decide el gobierno si concede o no un indulto?</strong>
+                </a>
+              </div>
+              <div class="accordion-body collapse" id="qEight">
+                <div class="accordion-inner">
+                  <p>Nadie lo sabe. Uno de los puntos más polémicos sobre esta medida de gracia es la opacidad de dicha decisión y la falta de información explícita sobre los motivos de la concesión o denegación de los indultos. Esta opacidad puede llegar a crear una percepción de <em>arbitrariedad</em> en su concesión que vulneraría uno de los principios de nuestra constitución.</p>
+                  <p>La constitución establece en su artículo 9.3 "<em>La Constitución garantiza el principio de legalidad, la jerarquía normativa, la publicidad de las normas, la irretroactividad de las disposiciones sancionadoras no favorables o restrictivas de derechos individuales, la seguridad jurídica, la responsabilidad y la <strong>interdicción de la arbitrariedad de los poderes públicos</strong>.</em>"</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#qNine">
+                  <strong>9. ¿Qué pensamos nosotros de los indultos?</strong>
+                </a>
+              </div>
+              <div class="accordion-body collapse" id="qNine">
+                <div class="accordion-inner">
+                  <p>Creemos que el indulto tal y como se define debe ser verdaderamente una <strong>medida excepcional</strong>. En una situación ideal, desde nuestro punto de vista, el volumen de indultos debería ser lo más cercano a cero posible</p>.<p>Si el número de indultos es alto y expuestos los casos se observa que las causas están justificadas, esto es un claro signo de que alguna de las leyes que sentenciaron en primera instancia a los posteriormente indultados debería ser revisada para corregir la anomalía detectada.</p>
+                  <p>En cualquier caso, mientras exista esa posibilidad en manos de nuestro gobierno, creemos que debe evitarse de una forma contundente la sensación de "arbitrariedad" justificando de forma explícita los motivos que llevan a la concesión de un indulto.</p> <p>También creemos que para garantizar una correcta separación de poderes, los veredictos de los informes del Tribunal y del Ministerio deberían ser de conocimiento público y tener un peso muy importante en la decisión a tomar. En caso de tomar una decisión contraria a cualquiera de los veredictos de dichos informes el razonamiento que lleva al gobierno a tomar esa medida deberían tener un grado de detalle aún mayor.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#qTen">
+                  <strong>10. ¿Qué es Civio?</strong>
+                </a>
+              </div>
+              <div class="accordion-body collapse" id="qTen">
+                <div class="accordion-inner">
+                  <p>Somos una organización sin ánimo de lucro que lucha por la transparencia informativa y la apertura de datos a través del uso de la tecnología. Desarrollamos aplicaciones web y generamos contenidos periodísticos de calidad. Queremos fomentar un concepto de ciudadanía activa e involucrada.</p>
+                  <p><strong>Aplicaciones + Contenidos = Contexto</strong></p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#qEleven">
+                  <strong>11. ¿Cómo puedes ayudar a Civio?</strong>
+                </a>
+              </div>
+              <div class="accordion-body collapse" id="qEleven">
+                <div class="accordion-inner">
+                  <p>Si te gusta lo que hacemos y quieres ayudarnos a seguir trabajando por la transparencia y apertura de datos en España...Por favor, haz una aportación económica.</p>
+                  <p><strong>Nos mantenemos gracias a gente como tú.</strong></p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#qTwelve">
+                  <strong>12. ¿Puedo reutilizar los datos?</strong>
+                </a>
+              </div>
+              <div class="accordion-body collapse" id="qTwelve">
+                <div class="accordion-inner">
+                  <p>La licencia sobre el trabajo de recopilación y limpieza de la base de datos final es <a href="http://opendatacommons.org/licenses/odbl/summary/">Open Database License 1.0</a>, que permite la distribución y reutilización del contenido siempre y cuando se atribuya el origen y se mantenga la apertura de las obras derivadas.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </article>
               <!-- FIXME: Add thanks section -->
