Create skeleton for technical doc page

--- a/web/programadores.html
+++ b/web/programadores.html
@@ -16,7 +16,40 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
 <section class="section">
   <div class="container">
     <div class="row-fluid">
-      Coming soon...
+      <div class="span3 docs-sidebar-menu">
+        <ul class="nav nav-list docs-sidebar-nav">
+          <li class="active"><a href="#sOne">Uno</a></li>
+          <li><a href="#sTwo">Dos</a></li>
+        </ul>
+      </div>
+      <div class="span9">
+        <h1>
+          Información técnica
+        </h1>
+        <p class="lead">
+          Estamos trabajando en esto...
+        </p>
+        <section id="sOne">
+          <div class="page-header docs-header">
+            <h2>
+              Estamos trabajando en esto
+            </h2>
+          </div>
+          <p>
+            ...
+          </p>
+        </section>
+        <section id="sTwo">
+          <div class="page-header docs-header">
+            <h2>
+              ...
+            </h2>
+          </div>
+          <p>
+            ...
+          </p>
+        </section>
+      </div>      
     </div>
   </div>
 </section>
