Added 500 results explanation

--- a/web/ayuda.html
+++ b/web/ayuda.html
@@ -171,6 +171,18 @@ nav_section: help
             </div>
             <div class="accordion-group">
               <div class="accordion-heading">
+                <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#500-resultados">
+                  <strong>¿Por qué solamente mostráis los primeros 500 resultados en la tabla de indultos?</strong>
+                </a>
+              </div>
+              <div class="accordion-body collapse" id="500-resultados">
+                <div class="accordion-inner">
+                  <p>En algunos navegadores la <em>renderización</em> de la tabla de indultos era demasiado pesada si traíamos todos los resultados. Siempre podéis aplicar algún filtro más restrictivo para ir viendo los resultados por partes.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-group">
+              <div class="accordion-heading">
                 <a class="accordion-toggle" data-parent="#accordion" data-toggle="collapse" href="#Civio">
                   <strong>¿Qué es Civio?</strong>
                 </a>
