Fixed the text of the internal links ("UNO" and "DOS") and titles to "API" and "Licencia" respectively

--- a/web/programadores.html
+++ b/web/programadores.html
@@ -18,8 +18,8 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
     <div class="row-fluid">
       <div class="span3 docs-sidebar-menu">
         <ul class="nav nav-list docs-sidebar-nav">
-          <li class="active"><a href="#sOne">Uno</a></li>
-          <li><a href="#sTwo">Dos</a></li>
+          <li class="active"><a href="#sOne">API</a></li>
+          <li><a href="#sTwo">Licencia</a></li>
         </ul>
       </div>
       <div class="span9">
@@ -32,11 +32,11 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
         <section id="sOne">
           <div class="page-header docs-header">
             <h2>
-              Estamos trabajando en esto
+              API
             </h2>
           </div>
           <p>
-            ...
+            Estamos trabajando en esto
           </p>
         </section>
         <section id="sTwo">
