Fixed typo on link closing tag

--- a/web/programadores.html
+++ b/web/programadores.html
@@ -46,7 +46,7 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
             </h2>
           </div>
           <p>
-            El Indultómetro es <strong>Software Libre</strong> y está distribuido bajo una licencia <a href="http://www.gnu.org/licenses/agpl-3.0.html">Affero GPL 3</a>. Este programa puede utilizarse, modificarse y distribuirse libremente respetando la autoría original y su licencia. Si se usa este programa o uno derivado para dar un servicio en un servidor (como una página web) deberá incluirse un aviso con un enlace a la aplicación original (<a href="http://www.elindultometro.es">http://www.elindultometro.es<a/>).
+            El Indultómetro es <strong>Software Libre</strong> y está distribuido bajo una licencia <a href="http://www.gnu.org/licenses/agpl-3.0.html">Affero GPL 3</a>. Este programa puede utilizarse, modificarse y distribuirse libremente respetando la autoría original y su licencia. Si se usa este programa o uno derivado para dar un servicio en un servidor (como una página web) deberá incluirse un aviso con un enlace a la aplicación original (<a href="http://www.elindultometro.es">http://www.elindultometro.es</a>).
           </p>
           <p>
             El código fuente puede descargarse del <a href="https://github.com/dcabo/indultometro">repositorio oficial en github</a>.
