Change history.back link

--- a/web/indulto.html
+++ b/web/indulto.html
@@ -16,7 +16,7 @@ nav_section: all_pardons
 <section class="section">
   <div class="container">
     <h4>
-      &larr; <a href="/indultos.html">Volver a la lista de indultos</a>
+      &larr; <a href="javascript:history.go(-1)">Volver</a> 
     </h4>
     <div class="row-fluid">
       <div class="span12">
