Adapt texts to 2013 new data

--- a/web/indultos.html
+++ b/web/indultos.html
@@ -21,7 +21,7 @@ nav_section: all_pardons
           Hemos <a href="/metodologia.html">recopilado, desgranado y clasificado toda la información contenida en el BOE</a> sobre los indultos concedidos en España desde 1996. Puedes buscar por tipo de delito, comparar los datos anuales y valorar el uso que los distintos gobiernos han hecho de esta prerrogativa. En definitiva, te invitamos a escarbar entre los datos.
         </p>
         <p><small>
-          Fuente: <a href="http://www.boe.es/" target="_blank">Agencia Estatal del Boletín Oficial del Estado</a>, años 1996-2013. Datos actualizados a 31 de diciembre de 2013.
+          Fuente: <a href="http://www.boe.es/" target="_blank">Agencia Estatal del Boletín Oficial del Estado</a>, años 1996-2013. Datos actualizados a 2 de febrero de 2014.
         </small></p>
         {% include sharing.html %}
 
