--- a/web/index.html
+++ b/web/index.html
@@ -203,7 +203,7 @@ title: El indultometro
               <div class="span8">
                 <h3>Colabora con nosotros</h3>
                 <p>
-                  Queremos seguir trabajando para que esta información sea accesible para todos los ciudadanos. Si te gusta el proyecto, puedes ayudarnos con <a href="http://www.civio.es/financiacion/">una donación</a>. También necesitamos ayuda técnica (diseño web y UX especialmente, pero también sysadmin o programación Rails/Javascript), si te interesa <a href="mailto:contacto@civio.es">escríbenos</a>.
+                  Queremos seguir trabajando para que esta información sea accesible para todos los ciudadanos. Si te gusta el proyecto, puedes ayudarnos con <a target="_blank" href="http://www.civio.es/dona/">una donación</a>. También necesitamos ayuda técnica (diseño web y UX especialmente, pero también sysadmin o programación Rails/Javascript), si te interesa <a href="mailto:contacto@civio.es">escríbenos</a>.
                 </p>
               </div>
               <div style="clear: both"/>
