--- a/web/noticias.html
+++ b/web/noticias.html
@@ -1,5 +1,5 @@
 ---
-title: En los medios
+title: Artículos
 nav_section: media
 ---
 
@@ -9,7 +9,7 @@ nav_section: media
 <section class="section alt" id="promo">
   <div class="container">
     <div class="hero-unit">
-      <h1>En los medios</h1>
+      <h1>Artículos</h1>
     </div>
   </div>
 </section>
