--- a/web/programadores.html
+++ b/web/programadores.html
@@ -18,7 +18,7 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
     <div class="row-fluid">
       <div class="span3 docs-sidebar-menu">
         <ul class="nav nav-list docs-sidebar-nav">
-          <li class="active"><a href="#sOne">API</a></li>
+          <li class="active"><a href="#sOne">Código fuente</a></li>
           <li><a href="#sTwo">Licencia</a></li>
         </ul>
       </div>
@@ -26,17 +26,14 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
         <h1>
           Información técnica
         </h1>
-        <p class="lead">
-          Estamos trabajando en esto...
-        </p>
         <section id="sOne">
           <div class="page-header docs-header">
             <h2>
-              API
+              Código fuente
             </h2>
           </div>
           <p>
-            Estamos trabajando en esto
+            El código fuente puede descargarse del <a href="https://github.com/civio/indultometro">repositorio oficial en github</a>.
           </p>
         </section>
         <section id="sTwo">
@@ -47,9 +44,6 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
           </div>
           <p>
             El Indultómetro es <strong>Software Libre</strong> y está distribuido bajo una licencia <a href="http://www.gnu.org/licenses/agpl-3.0.html">Affero GPL 3</a>. Este programa puede utilizarse, modificarse y distribuirse libremente respetando la autoría original y su licencia. Si se usa este programa o uno derivado para dar un servicio en un servidor (como una página web) deberá incluirse un aviso con un enlace a la aplicación original (<a href="http://www.elindultometro.es">http://www.elindultometro.es</a>).
-          </p>
-          <p>
-            El código fuente puede descargarse del <a href="https://github.com/civio/indultometro">repositorio oficial en github</a>.
           </p>
         </section>
       </div>      
