Añadir explicación 1996 en metodología

--- a/web/metodologia.html
+++ b/web/metodologia.html
@@ -50,7 +50,7 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
           Como primer paso hemos procedido a descargar todas las disposiciones de la Serie A del BOE
           (es decir, descartando las secciones de Administración de Justicia, Anuncios y las sentencias,
             declaraciones y autos del Tribunal Constitucional) desde la actualidad hasta 
-          el año 1996 en formato HTML. En este <a href="http://www.boe.es/buscar/doc.php?id=BOE-A-2008-12344" target="_blank">ejemplo</a> podéis ver una disposición en la que se convocan unas pruebas selectivas
+          el año 1996 en formato HTML. De hecho, nuestros datos llegan a ese año porque antes de 1996 el BOE no está en HTML. En este <a href="http://www.boe.es/buscar/doc.php?id=BOE-A-2008-12344" target="_blank">ejemplo</a> podéis ver una disposición en la que se convocan unas pruebas selectivas
            para el Cuerpo Superior de Técnicos de Instituciones Penintenciarias. 
           </p>
           <small><em>Nota:</em> Hemos utilizado <em>Ruby</em> para realizar esta descarga automatizada de las disposiciones. En los próximos días publicaremos todo el código utilizado para estas tareas.</small>
