Make pardons graph embeddable & responsive

--- a/web/ayuda.html
+++ b/web/ayuda.html
@@ -1,10 +1,10 @@
 ---
+layout: page
 title: ¿Qué es esto?
 body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
 nav_section: help
 ---
 
-{% include header.html %}
 <!-- Main Content -->
 <div id="content" role="main">
 <section class="section alt" id="promo">
@@ -240,4 +240,3 @@ $(function () {
   location.hash && $(location.hash + '.collapse').collapse('show');
 });
 </script>
-{% include footer.html %}
