--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,7 @@
 ---
-layout: base
+layout: page
 title: El indultometro
 ---
-
-{% include header.html %}
 
 <!-- Main Content -->
 <div id="content" role="main">
@@ -229,4 +227,3 @@ title: El indultometro
   </div>
 </section>
 </div>
-{% include footer.html %}
