--- a/web/indulto.html
+++ b/web/indulto.html
@@ -1,9 +1,9 @@
 ---
+layout: page
 title: El indultómetro
 nav_section: all_pardons
 ---
 
-{% include header.html %}
 <!-- Main Content -->
 <div id="content" role="main">
 <section class="section alt" id="promo">
@@ -79,5 +79,3 @@ nav_section: all_pardons
     }).success(renderResults);
   });
 </script>
-
-{% include footer.html %}
