--- a/web/famosos.html
+++ b/web/famosos.html
@@ -1,10 +1,10 @@
 ---
+layout: page
 title: Indultos destacados
 body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
 nav_section: main_pardons
 ---
 
-{% include header.html %}
 <!-- Main Content -->
 <div id="content" role="main">
 <section class="section alt" id="promo">
@@ -42,4 +42,3 @@ nav_section: main_pardons
         }
 </script>
 <script type="text/javascript" src="javascripts/storyjs-embed.js"></script>
-{% include footer.html %}
