--- a/web/metodologia.html
+++ b/web/metodologia.html
@@ -1,9 +1,9 @@
 ---
+layout: page
 title: ¿Cómo se hizo?
 body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
 ---
 
-{% include header.html %}
 <!-- Main Content -->
 <div id="content" role="main">
 <section class="section alt" id="promo">
@@ -244,4 +244,3 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
   </div>
 </div>
 </div>
-{% include footer.html %}
