--- a/web/noticias.html
+++ b/web/noticias.html
@@ -1,9 +1,9 @@
 ---
+layout: page
 title: Artículos
 nav_section: media
 ---
 
-{% include header.html %}
 <!-- Main Content -->
 <div id="content" role="main">
 <section class="section alt" id="promo">
@@ -48,4 +48,3 @@ nav_section: media
   </div>
 </section>
 </div>
-{% include footer.html %}
