--- a/web/programadores.html
+++ b/web/programadores.html
@@ -1,9 +1,9 @@
 ---
+layout: page
 title: Información técnica - API &amp; código fuente
 body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
 ---
 
-{% include header.html %}
 <!-- Main Content -->
 <div id="content" role="main">
 <section class="section alt" id="promo">
@@ -50,5 +50,3 @@ body-attributes: data-target=".docs-sidebar-menu" data-spy="scroll"
     </div>
   </div>
 </section>
-{% include footer.html %}
-
